--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
         "node": true,
         "mocha": true
     },
+    "plugins": ["json"],
     "extends": [
         "eslint:recommended"
     ],
