--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test:watch": "mocha-webpack --watch",
         "test": "mocha-webpack --webpack-config webpack.test.config.js",
         "coverage": "cross-env NODE_ENV=coverage nyc --reporter=html npm run test",
-        "lint": "eslint -f json -o ./lint/eslint-report.json src"
+        "lint": "eslint -f html -o ./lint/eslint-report.html src"
     },
     "nyc": {
         "include": [
@@ -27,6 +27,7 @@
     "devDependencies": {
         "cross-env": "^5.2.0",
         "eslint": "^5.0.1",
+        "eslint-plugin-json": "^1.2.1",
         "istanbul-instrumenter-loader": "^3.0.1",
         "mocha": "^5.2.0",
         "mocha-webpack": "^2.0.0-beta.0",
